--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,4 +7,22 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+            <ion-input placeholder="Enter Expense Name" [(ngModel)]="name"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+            <ion-datetime placeholder="Enter Date" display-format="DDD DD,MMM YYYY" 
+            picker-format="DD,MMM YYYY" picker-options="{cssClass:'picker'}" [(ngModel)]="date"></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-button color="success" (click)="getName()">Save Expense</ion-button>
+  </ion-grid>
 </ion-content>
