Added infinite scrolling functionality

--- a/src/app/ViewExpenses/ViewExpenses.html
+++ b/src/app/ViewExpenses/ViewExpenses.html
@@ -18,7 +18,7 @@
   </ion-split-pane>
 
 <ion-content>
-  <ion-card *ngFor='let expense of expenses'>
+    <ion-card *ngFor='let expense of expenses'>
     <ion-card-header class="expense-card-header">
       {{ expense.name }} <b>ID: {{ expense.id }}</b>
       <span float-right [ngClass]="'expense-priority-' + expense.priority.toLowerCase()"></span>
@@ -28,6 +28,10 @@
         <span float-right>{{ expense.amount }} {{ expense.currency }} &rarr; {{ expense.rupeeEquivalent}} INR</span>
     </ion-card-content>
   </ion-card>
+
+    <ion-infinite-scroll (ionInfinite)="fetchMore($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
 
 
